--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "infinite-scroll": "^4.0.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8"
   }
 }
